--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 !/log/.keep
 /tmp
 /public/assets
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
