--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,10 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      ruby: 3.1.4
     commands:
-      - gem install bundler
+      - gem install bundler -v 2.3.26
       - bundle install
   build:
     commands:
