--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,7 @@ phases:
       ruby: 3.1
     commands:
       - gem install bundler -v 2.3.26
-      - bundle install
-  build:
-    commands:
-      - bundle exec rake build
-  post_build:
-    commands:
-      - bundle exec rake deploy
+      - bundle install --deployment
+artifacts:
+  files:
+    - '**/*'
