--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,12 @@ phases:
   install:
     runtime-versions:
       ruby: 3.1
+      nodejs: 20
     commands:
       - gem install bundler -v 2.3.26
       - bundle install --deployment
+      - yarn install
+      - tar czvf radio-backend.tgz --exclude-vcs --exclude=spec --exclude=tmp --exclude=log *
 artifacts:
   files:
-    - '**/*'
+    - 'radio-backend.tgz'
