--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "dependencies": {
-    "@rails/webpacker": "5.4.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "autoprefixer": "^10.4.19",
+    "css-loader": "^7.1.1",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^12.1.2",
+    "sass": "^1.77.0",
+    "sass-loader": "^14.2.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
-  "devDependencies": {
-    "webpack-dev-server": "^3"
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css"
   }
 }
