--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,9 @@ phases:
       ruby: 3.4
     commands:
       - gem install bundler -v 2.5.10
-      - bundle install --deployment
+      - bundle config set deployment true
+      - bundle config set path 'vendor/bundle'
+      - bundle install
   post_build:
     commands:
       - tar czf radio-backend.tgz --exclude-vcs --exclude=spec --exclude=tmp --exclude=log *
