--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,13 @@ permissions:
     group: ubuntu
 hooks:
   BeforeInstall:
+    - location: scripts/prepare_next.sh
+      timeout: 60
+      runas: ubuntu
+  AfterInstall:
     - location: scripts/deploy_setup.rb
       runas: ubuntu
-
+  ApplicationStart:
+    - location: scripts/restart_service.sh
+      timeout: 60
+      runas: ubuntu
