Revert "try type instead of pattern"
This reverts commit b190bf2307172efa4cffd48bd4befb669a8f8fd7.

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /opt/claqradio/radio-backend/next
 permissions:
   - object: /opt/claqradio/radio-backend/next
-    type: directory
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
 hooks:
