--- a/appspec.yml
+++ b/appspec.yml
@@ -9,6 +9,10 @@ permissions:
     owner: ubuntu
     group: ubuntu
 hooks:
+  BeforeInstall:
+    - location: scripts/prepare_next.sh
+      timeout: 60
+      runas: ubuntu
   AfterInstall:
     - location: scripts/deploy_setup.rb
       runas: ubuntu
