try permissions for pattern

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,10 @@ files:
     destination: /opt/claqradio/radio-backend/next
 permissions:
   - object: /opt/claqradio/radio-backend/next
+    pattern: ""
+    owner: ubuntu
+    group: ubuntu
+  - object: /opt/claqradio/radio-backend/next
     pattern: "**"
     owner: ubuntu
     group: ubuntu
@@ -12,4 +16,3 @@ hooks:
   BeforeInstall:
     - location: scripts/deploy_setup.rb
       runas: ubuntu
-
